# bot-builder-entity

./: .env.example  pyproject.toml
bot_builder_entity/: main.py
bot_builder_entity/config/: settings.py
bot_builder_entity/core/: controller.py  core_module.py  helpers.py
bot_builder_entity/decorators/: validate_token.py
bot_builder_entity/entities/: entities_controller.py  entities_module.py  entities_service.py
bot_builder_entity/entities/dto/: create_entity_dto.py  delete_entity_dto.py  entity_base_dto.py  entity_out_dto.py  update_entity_dto.py
bot_builder_entity/entities/schemas/: entity_schema.py  option_schema.py  synonym_schema.py
bot_builder_entity/grpc_server/: module.py  service.py
bot_builder_entity/grpc_server/dto/: entity_out_dto.py
bot_builder_entity/interceptors/: response_interceptor.py
bot_builder_entity/postgres/: engine.py
bot_builder_entity/proto/auth/: auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py
