[tool.poetry]
name = "bot-builder-entity"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlmodel = "^0.0.16"
grpcio = "^1.62.0"
grpcio-tools = "^1.62.0"
pydantic-settings = "^2.2.1"
psycopg2-binary = "^2.9.9"
black = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "bot_builder_entity.main:start"